Refactor: Clean up for Checkstyle/PMD/SpotBugs compliance & magic number removal
- Fixed all Checkstyle issues:
  - Added missing Javadoc comments on classes, methods, and fields.
  - Ordered and named static fields to match Java conventions.
  - Ensured field and parameter immutability where appropriate.

- Fixed PMD issues:
  - Declared all local variables and parameters as final where possible.
  - Removed magic numbers in all factories/generators.
  - Extracted repeated string literals to constants.
  - Avoided catching overly broad exceptions.
  - Replaced inefficient string checks with String.isBlank().
  - Eliminated unnecessary parentheses and modifiers.

- Fixed SpotBugs issues:
  - Used StandardCharsets.UTF_8 in all file IO operations to avoid reliance on default encoding.
  - Annotated fields in EndGameMenu and MainController with @SuppressFBWarnings where necessary.
  - Avoided exposing internal representation by marking fields as final and/or adding FB warning suppressions.

- Replaced all magic room ID numbers in MinigameFactory and RoomGenerator with descriptive static final constants.
- Added Javadoc for all public static fields.
- Improved method parameter and local variable immutability throughout codebase.
- Restructured maze and minigame generator logic to use only named constants, no hard-coded values.

- Minor refactor:
  - Updated format strings to use `%n` instead of `\n` where required.
  - Used logger instead of printStackTrace in all exception handling.
  - Improved switch statements for room-minigame mapping.
  - Clarified type names and magic numbers throughout codebase.

All core modules now pass Checkstyle, PMD, and SpotBugs checks.
Build is stable under Java 21.