@@ -1,8 +1,8 @@
 package it.unibo.exam.view.panel;
 
 import it.unibo.exam.model.entity.Player;
-import it.unibo.exam.model.leaderboard.LeaderboardEntry;
-import it.unibo.exam.model.leaderboard.LeaderboardManage;
+import it.unibo.exam.model.leaderboard.LeaderboardEntry1;
+import it.unibo.exam.model.leaderboard.LeaderboardManage1;
 
 import java.awt.BorderLayout;
 import java.awt.Color;
@@ -11,77 +11,85 @@ import java.awt.Font;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.Insets;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import java.util.List;
 
 import javax.swing.BorderFactory;
 import javax.swing.JButton;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
-import javax.swing.JPanel;
 import javax.swing.JOptionPane;
+import javax.swing.JPanel;
 import javax.swing.SwingConstants;
+
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
 /**
  * End game menu panel that displays the final score and completion statistics.
  * Shown when the player completes all puzzle rooms.
  */
-@SuppressFBWarnings(value = {"SE_BAD_FIELD", "SE_BAD_FIELD_STORE"}, 
-                   justification = "EndGameMenu is not intended to be serialized,"
-                   + " contains game-specific non-serializable components")
-public class EndGameMenu extends JPanel {
+@SuppressFBWarnings(
+    value = {"SE_BAD_FIELD", "SE_BAD_FIELD_STORE"},
+    justification = "EndGameMenu is not intended to be serialized,"
+                + " contains game-specific non-serializable components"
+)
+public final class EndGameMenu extends JPanel {
 
     private static final long serialVersionUID = 1L;
 
+    // Font
+    private static final String FONT_NAME = "Arial";
+
     // UI Constants
-    private static final int TITLE_FONT_SIZE = 48;
-    private static final int SUBTITLE_FONT_SIZE = 24;
-    private static final int LEADERBOARD_FONT_SIZE = 16;
-    private static final int BUTTON_FONT_SIZE = 20;
-    private static final int BUTTON_WIDTH = 200;
-    private static final int BUTTON_HEIGHT = 50;
-    private static final int PANEL_PADDING = 30;
+    private static final int TITLE_FONT_SIZE        = 48;
+    private static final int SUBTITLE_FONT_SIZE     = 24;
+    private static final int LEADERBOARD_FONT_SIZE  = 16;
+    private static final int BUTTON_FONT_SIZE       = 20;
+    private static final int BUTTON_WIDTH           = 200;
+    private static final int BUTTON_HEIGHT          = 50;
+    private static final int PANEL_PADDING          = 30;
 
     // Panel Size Constants
-    private static final int LEADERBOARD_PANEL_WIDTH = 500;
+    private static final int LEADERBOARD_PANEL_WIDTH  = 500;
     private static final int LEADERBOARD_PANEL_HEIGHT = 400;
-    private static final int BUTTON_PANEL_WIDTH = 250;
-    private static final int BUTTON_PANEL_HEIGHT = 400;
-    private static final int BUTTON_PANEL_TOP_MARGIN = 50;
+    private static final int BUTTON_PANEL_WIDTH       = 250;
+    private static final int BUTTON_PANEL_HEIGHT      = 400;
+    private static final int BUTTON_PANEL_TOP_MARGIN  = 50;
 
     // Layout Constants
-    private static final int INSETS_SMALL = 5;
+    private static final int INSETS_SMALL  = 5;
     private static final int INSETS_MEDIUM = 10;
-    private static final int INSETS_XL = 20;
-    private static final int INSETS_XXL = 30;
+    private static final int INSETS_XL     = 20;
+    private static final int INSETS_XXL    = 30;
 
     // Button Colors
-    private static final int BUTTON_RED = 70;
+    private static final int BUTTON_RED   = 70;
     private static final int BUTTON_GREEN = 130;
-    private static final int BUTTON_BLUE = 180;
+    private static final int BUTTON_BLUE  = 180;
 
     // Colors
     private static final Color BACKGROUND_COLOR = new Color(25, 25, 35);
-    private static final Color TITLE_COLOR = new Color(255, 215, 0); // Gold
-    private static final Color TEXT_COLOR = new Color(255, 255, 255);
-    private static final Color STATS_COLOR = new Color(200, 200, 200); // Light gray for stats
+    private static final Color TITLE_COLOR      = new Color(255, 215, 0);
+    private static final Color TEXT_COLOR       = new Color(255, 255, 255);
+    private static final Color STATS_COLOR      = new Color(200, 200, 200);
 
+    @SuppressFBWarnings("EI_EXPOSE_REP")
     private final JFrame parentWindow;
+
+    @SuppressFBWarnings("EI_EXPOSE_REP")
     private final Player player;
-    private final LeaderboardManage leaderboard;
+
+    private final LeaderboardManage1 leaderboard;
 
     /**
      * Creates the end game menu with player statistics.
      *
      * @param parentWindow the parent window
-     * @param player the player object containing completion data
+     * @param player       the player object containing completion data
      */
     public EndGameMenu(final JFrame parentWindow, final Player player) {
         this.parentWindow = parentWindow;
-        this.player = player;
-        this.leaderboard = new LeaderboardManage();
+        this.player       = player;
+        this.leaderboard  = new LeaderboardManage1();
         initializeUI();
     }
 
@@ -93,35 +101,26 @@ public class EndGameMenu extends JPanel {
         setBackground(BACKGROUND_COLOR);
         setPreferredSize(parentWindow.getSize());
 
-        // Title panel at the top
-        final JPanel titlePanel = createTitlePanel();
-        add(titlePanel, BorderLayout.NORTH);
-
-        // Main content with two columns
-        final JPanel mainPanel = createMainContentPanel();
-        add(mainPanel, BorderLayout.CENTER);
+        add(createTitlePanel(), BorderLayout.NORTH);
+        add(createMainContentPanel(), BorderLayout.CENTER);
     }
 
-    /**
-     * Creates the title panel with congratulations message.
-     *
-     * @return the title panel
-     */
     private JPanel createTitlePanel() {
         final JPanel panel = new JPanel(new GridBagLayout());
         panel.setBackground(BACKGROUND_COLOR);
-        panel.setBorder(BorderFactory.createEmptyBorder(PANEL_PADDING, PANEL_PADDING, 
-                                                       INSETS_MEDIUM, PANEL_PADDING));
+        panel.setBorder(BorderFactory.createEmptyBorder(
+            PANEL_PADDING, PANEL_PADDING, INSETS_MEDIUM, PANEL_PADDING
+        ));
 
         final GridBagConstraints gbc = new GridBagConstraints();
-        gbc.gridx = 0;
-        gbc.gridy = 0;
-        gbc.insets = new Insets(INSETS_MEDIUM, 0, INSETS_SMALL, 0);
-        gbc.anchor = GridBagConstraints.CENTER;
+        gbc.gridx   = 0;
+        gbc.gridy   = 0;
+        gbc.insets  = new Insets(INSETS_MEDIUM, 0, INSETS_SMALL, 0);
+        gbc.anchor  = GridBagConstraints.CENTER;
 
-        // Congratulations title
+        // Title
         final JLabel titleLabel = new JLabel("🎉 CONGRATULAZIONI! 🎉");
-        titleLabel.setFont(new Font("Arial", Font.BOLD, TITLE_FONT_SIZE));
+        titleLabel.setFont(new Font(FONT_NAME, Font.BOLD, TITLE_FONT_SIZE));
         titleLabel.setForeground(TITLE_COLOR);
         titleLabel.setHorizontalAlignment(SwingConstants.CENTER);
         panel.add(titleLabel, gbc);
@@ -129,7 +128,7 @@ public class EndGameMenu extends JPanel {
         // Subtitle
         gbc.gridy++;
         final JLabel subtitleLabel = new JLabel("Hai completato tutti i puzzle!");
-        subtitleLabel.setFont(new Font("Arial", Font.PLAIN, SUBTITLE_FONT_SIZE));
+        subtitleLabel.setFont(new Font(FONT_NAME, Font.PLAIN, SUBTITLE_FONT_SIZE));
         subtitleLabel.setForeground(TEXT_COLOR);
         subtitleLabel.setHorizontalAlignment(SwingConstants.CENTER);
         panel.add(subtitleLabel, gbc);
@@ -137,161 +136,123 @@ public class EndGameMenu extends JPanel {
         return panel;
     }
 
-    /**
-     * Creates the main content panel with leaderboard on left and buttons on right.
-     *
-     * @return the main content panel
-     */
     private JPanel createMainContentPanel() {
         final JPanel panel = new JPanel(new BorderLayout());
         panel.setBackground(BACKGROUND_COLOR);
-        panel.setBorder(BorderFactory.createEmptyBorder(0, PANEL_PADDING, PANEL_PADDING, PANEL_PADDING));
+        panel.setBorder(BorderFactory.createEmptyBorder(
+            0, PANEL_PADDING, PANEL_PADDING, PANEL_PADDING
+        ));
 
-        // Add player to leaderboard first
         addToLeaderboardWithNamePrompt();
-
-        // Left side: Leaderboard
-        final JPanel leftPanel = createLeaderboardPanel();
-        panel.add(leftPanel, BorderLayout.WEST);
-
-        // Right side: Buttons
-        final JPanel rightPanel = createButtonPanel();
-        panel.add(rightPanel, BorderLayout.EAST);
+        panel.add(createLeaderboardPanel(), BorderLayout.WEST);
+        panel.add(createButtonPanel(),       BorderLayout.EAST);
 
         return panel;
     }
 
-    /**
-     * Creates the leaderboard panel.
-     *
-     * @return the leaderboard panel
-     */
     private JPanel createLeaderboardPanel() {
         final JPanel panel = new JPanel(new GridBagLayout());
         panel.setBackground(BACKGROUND_COLOR);
-        panel.setPreferredSize(new Dimension(LEADERBOARD_PANEL_WIDTH, LEADERBOARD_PANEL_HEIGHT));
+        panel.setPreferredSize(new Dimension(
+            LEADERBOARD_PANEL_WIDTH, LEADERBOARD_PANEL_HEIGHT
+        ));
         panel.setBorder(BorderFactory.createCompoundBorder(
             BorderFactory.createLineBorder(TITLE_COLOR, 2),
-            BorderFactory.createEmptyBorder(INSETS_XL, INSETS_XXL, INSETS_XL, INSETS_XXL)
+            BorderFactory.createEmptyBorder(
+                INSETS_XL, INSETS_XXL, INSETS_XL, INSETS_XXL
+            )
         ));
 
         final GridBagConstraints gbc = new GridBagConstraints();
-        gbc.gridx = 0;
-        gbc.gridy = 0;
-        gbc.insets = new Insets(INSETS_SMALL, 0, INSETS_XL, 0);
-        gbc.anchor = GridBagConstraints.CENTER;
+        gbc.gridx   = 0;
+        gbc.gridy   = 0;
+        gbc.insets  = new Insets(INSETS_SMALL, 0, INSETS_XL, 0);
+        gbc.anchor  = GridBagConstraints.CENTER;
 
-        // Leaderboard title
+        // Title
         final JLabel titleLabel = new JLabel("🏆 TOP 10 CLASSIFICA 🏆");
-        titleLabel.setFont(new Font("Arial", Font.BOLD, SUBTITLE_FONT_SIZE));
+        titleLabel.setFont(new Font(FONT_NAME, Font.BOLD, SUBTITLE_FONT_SIZE));
         titleLabel.setForeground(TITLE_COLOR);
         panel.add(titleLabel, gbc);
 
-        // Leaderboard entries
-        final List<LeaderboardEntry> entries = leaderboard.getTop10();
+        final List<LeaderboardEntry1> entries = leaderboard.getTop10();
         gbc.anchor = GridBagConstraints.WEST;
 
         if (entries.isEmpty()) {
             gbc.gridy++;
-            final JLabel emptyLabel = new JLabel("Nessun punteggio registrato");
-            emptyLabel.setFont(new Font("Arial", Font.ITALIC, LEADERBOARD_FONT_SIZE));
-            emptyLabel.setForeground(STATS_COLOR);
+            final JLabel emptyLabel = createLeaderboardLabel("Nessun punteggio registrato", false, true);
             gbc.anchor = GridBagConstraints.CENTER;
             panel.add(emptyLabel, gbc);
         } else {
             for (int i = 0; i < entries.size(); i++) {
                 gbc.gridy++;
-                final LeaderboardEntry entry = entries.get(i);
-                final String position = (i + 1) + ".";
-
-                // Check if this is the current player's entry (based on score only)
-                final boolean isCurrentPlayer = entry.getScore() == player.getTotalScore();
-
-                final String entryText = String.format("%-3s %-15s %4d pts",
-                    position,
+                final LeaderboardEntry1 entry = entries.get(i);
+                final boolean isCurrent = entry.getScore() == player.getTotalScore();
+                final String text = String.format(
+                    "%-3s %-15s %4d pts",
+                    (i + 1) + ".",
                     truncateName(entry.getPlayerName(), 15),
                     entry.getScore()
                 );
-
-                final JLabel entryLabel = new JLabel(entryText);
-                entryLabel.setFont(new Font("Monospaced", Font.PLAIN, LEADERBOARD_FONT_SIZE));
-
-                if (isCurrentPlayer) {
-                    entryLabel.setForeground(TITLE_COLOR);
-                    entryLabel.setFont(new Font("Monospaced", Font.BOLD, LEADERBOARD_FONT_SIZE));
-                    entryLabel.setText("👑 " + entryText);
-                } else {
-                    entryLabel.setForeground(STATS_COLOR);
-                }
-
+                final JLabel entryLabel = createLeaderboardLabel(
+                    isCurrent ? "👑 " + text : text,
+                    isCurrent,
+                    false
+                );
                 panel.add(entryLabel, gbc);
             }
         }
-
         return panel;
     }
 
-    /**
-     * Creates the button panel with menu and exit options.
-     *
-     * @return the button panel
-     */
+    // Helper to remove duplicate JLabel code and fix PMD warnings
+    private JLabel createLeaderboardLabel(final String text, final boolean highlight, final boolean italic) {
+        final JLabel label = new JLabel(text);
+        label.setFont(new Font(
+            italic ? FONT_NAME : Font.MONOSPACED,
+            highlight ? Font.BOLD : italic ? Font.ITALIC : Font.PLAIN,
+            LEADERBOARD_FONT_SIZE
+        ));
+        label.setForeground(highlight ? TITLE_COLOR : STATS_COLOR);
+        return label;
+    }
+
     private JPanel createButtonPanel() {
         final JPanel panel = new JPanel(new GridBagLayout());
         panel.setBackground(BACKGROUND_COLOR);
-        panel.setBorder(BorderFactory.createEmptyBorder(BUTTON_PANEL_TOP_MARGIN, INSETS_XXL, 0, 0));
-        panel.setPreferredSize(new Dimension(BUTTON_PANEL_WIDTH, BUTTON_PANEL_HEIGHT));
+        panel.setBorder(BorderFactory.createEmptyBorder(
+            BUTTON_PANEL_TOP_MARGIN, INSETS_XXL, 0, 0
+        ));
+        panel.setPreferredSize(new Dimension(
+            BUTTON_PANEL_WIDTH, BUTTON_PANEL_HEIGHT
+        ));
 
         final GridBagConstraints gbc = new GridBagConstraints();
-        gbc.gridx = 0;
-        gbc.gridy = 0;
+        gbc.gridx  = 0;
+        gbc.gridy  = 0;
         gbc.insets = new Insets(0, 0, INSETS_XL, 0);
 
-        // Menu button
         final JButton menuButton = createStyledButton("Menu Principale");
-        menuButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(final ActionEvent e) {
-                returnToMainMenu();
-            }
-        });
+        menuButton.addActionListener(e -> returnToMainMenu());
         panel.add(menuButton, gbc);
 
-        // Play again button
         gbc.gridy++;
         final JButton playAgainButton = createStyledButton("Gioca Ancora");
-        playAgainButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(final ActionEvent e) {
-                startNewGame();
-            }
-        });
+        playAgainButton.addActionListener(e -> startNewGame());
         panel.add(playAgainButton, gbc);
 
-        // Exit button
         gbc.gridy++;
         final JButton exitButton = createStyledButton("Esci");
-        exitButton.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(final ActionEvent e) {
-                exitGame();
-            }
-        });
+        exitButton.addActionListener(e -> exitGame());
         panel.add(exitButton, gbc);
 
         return panel;
     }
 
-    /**
-     * Creates a styled button with consistent appearance.
-     *
-     * @param text the button text
-     * @return the styled button
-     */
     private JButton createStyledButton(final String text) {
         final JButton button = new JButton(text);
         button.setPreferredSize(new Dimension(BUTTON_WIDTH, BUTTON_HEIGHT));
-        button.setFont(new Font("Arial", Font.BOLD, BUTTON_FONT_SIZE));
+        button.setFont(new Font(FONT_NAME, Font.BOLD, BUTTON_FONT_SIZE));
         button.setBackground(new Color(BUTTON_RED, BUTTON_GREEN, BUTTON_BLUE));
         button.setForeground(Color.WHITE);
         button.setFocusPainted(false);
@@ -299,58 +260,42 @@ public class EndGameMenu extends JPanel {
         return button;
     }
 
-    /**
-     * Returns to the main menu.
-     */
     private void returnToMainMenu() {
         parentWindow.getContentPane().removeAll();
-        final MainMenuPanel mainMenu = new MainMenuPanel(parentWindow);
-        parentWindow.add(mainMenu);
+        parentWindow.add(new MainMenuPanel(parentWindow));
         parentWindow.revalidate();
         parentWindow.repaint();
     }
 
-    /**
-     * Starts a new game.
-     */
     private void startNewGame() {
         parentWindow.getContentPane().removeAll();
-
         final Dimension windowSize = parentWindow.getSize();
-        final it.unibo.exam.utility.geometry.Point2D gameSize = 
-            new it.unibo.exam.utility.geometry.Point2D(windowSize.width, windowSize.height);
-
+        final it.unibo.exam.utility.geometry.Point2D gameSize =
+            new it.unibo.exam.utility.geometry.Point2D(
+                windowSize.width, windowSize.height
+            );
         final GamePanel gamePanel = new GamePanel(gameSize, parentWindow);
         parentWindow.add(gamePanel);
         gamePanel.requestFocusInWindow();
-
         parentWindow.revalidate();
         parentWindow.repaint();
     }
 
-    /**
-     * Exits the game.
-     */
     private void exitGame() {
         parentWindow.dispose();
     }
 
-    /**
-     * Adds the player to the leaderboard with a name prompt.
-     * Uses the total score from player's completed rooms.
-     */
     private void addToLeaderboardWithNamePrompt() {
-        final int totalScore = player.getTotalScore(); // Usa il total score da Player
-        final String playerName = JOptionPane.showInputDialog(
+        final int totalScore = player.getTotalScore();
+        final String name = JOptionPane.showInputDialog(
             parentWindow,
             "Inserisci il tuo nome per la classifica:",
             "Nome Giocatore",
             JOptionPane.QUESTION_MESSAGE
         );
 
-        if (playerName != null && !playerName.trim().isEmpty()) {
-            // Usa 0 come tempo fittizio, ora ci basiamo solo sul punteggio
-            final boolean added = leaderboard.addScore(playerName.trim(), totalScore, 0);
+        if (name != null && !name.isBlank()) {
+            final boolean added = leaderboard.addScore(name.trim(), totalScore, 0);
             if (added) {
                 JOptionPane.showMessageDialog(
                     parentWindow,
@@ -362,17 +307,9 @@ public class EndGameMenu extends JPanel {
         }
     }
 
-    /**
-     * Truncates a name to the specified maximum length.
-     *
-     * @param name the name to truncate
-     * @param maxLength the maximum length
-     * @return the truncated name
-     */
     private String truncateName(final String name, final int maxLength) {
-        if (name.length() <= maxLength) {
-            return name;
-        }
-        return name.substring(0, maxLength - 3) + "...";
+        return (name.length() <= maxLength)
+            ? name
+            : name.substring(0, maxLength - 3) + "...";
     }
 }
